# test_creation_case

./: .gitignore  README.md  pyproject.toml
test_creation_app/: manage.py
test_creation_app/test_creation_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
test_creation_app/test_creation_api/migrations/: 0001_initial.py
test_creation_app/test_creation_app/: asgi.py  settings.py  urls.py  wsgi.py
